--- a/student/get-number.html
+++ b/student/get-number.html
@@ -64,7 +64,7 @@
 <div class="row"></div>
 <div class="container">
     <div class="row">
-        <div class="clock col s6 m6 offset-s1 offset-m3">
+        <div class="clock col s6 m6 offset-s2 offset-m3">
             <div class='clock-wrapper'>
                 <div class='bg'></div>
                 <div class='minutes'>
@@ -303,76 +303,13 @@
                         </div>
                     </div>
                 </div>
-                <div class='seconds-wrapper'>
-                    <div class='seconds' id='seconds'>
-                        <div class='second'>0</div>
-                        <div class='second'>1</div>
-                        <div class='second'>2</div>
-                        <div class='second'>3</div>
-                        <div class='second'>4</div>
-                        <div class='second'>5</div>
-                        <div class='second'>6</div>
-                        <div class='second'>7</div>
-                        <div class='second'>8</div>
-                        <div class='second'>9</div>
-                        <div class='second'>10</div>
-                        <div class='second'>11</div>
-                        <div class='second'>12</div>
-                        <div class='second'>13</div>
-                        <div class='second'>14</div>
-                        <div class='second'>15</div>
-                        <div class='second'>16</div>
-                        <div class='second'>17</div>
-                        <div class='second'>18</div>
-                        <div class='second'>19</div>
-                        <div class='second'>20</div>
-                        <div class='second'>21</div>
-                        <div class='second'>22</div>
-                        <div class='second'>23</div>
-                        <div class='second'>24</div>
-                        <div class='second'>25</div>
-                        <div class='second'>26</div>
-                        <div class='second'>27</div>
-                        <div class='second'>28</div>
-                        <div class='second'>29</div>
-                        <div class='second'>30</div>
-                        <div class='second'>31</div>
-                        <div class='second'>32</div>
-                        <div class='second'>33</div>
-                        <div class='second'>34</div>
-                        <div class='second'>35</div>
-                        <div class='second'>36</div>
-                        <div class='second'>37</div>
-                        <div class='second'>38</div>
-                        <div class='second'>39</div>
-                        <div class='second'>40</div>
-                        <div class='second'>41</div>
-                        <div class='second'>42</div>
-                        <div class='second'>43</div>
-                        <div class='second'>44</div>
-                        <div class='second'>45</div>
-                        <div class='second'>46</div>
-                        <div class='second'>47</div>
-                        <div class='second'>48</div>
-                        <div class='second'>49</div>
-                        <div class='second'>50</div>
-                        <div class='second'>51</div>
-                        <div class='second'>52</div>
-                        <div class='second'>53</div>
-                        <div class='second'>54</div>
-                        <div class='second'>55</div>
-                        <div class='second'>56</div>
-                        <div class='second'>57</div>
-                        <div class='second'>58</div>
-                        <div class='second'>59</div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
     <div class="row"></div>
     <div class="row" id="margin-top">
-        <a class="waves-effect waves-light btn-large">GET NUMBER</a>
+        <a class="waves-effect waves-light btn-large col s4 m2 offset-s4 offset-m5">GET NUMBER</a>
     </div>
 
     <div class="row">
