--- a/student/register.html
+++ b/student/register.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../bower_components/materialize/dist/css/materialize.css">
 
     <!--Import style.css-->
-    <link rel="stylesheet" href="../resource/css/form.css">
+    <link rel="stylesheet" href="../resource/css/register.css">
 
 
     <!--Import materialize js-->
