--- a/student/register.html
+++ b/student/register.html
@@ -26,7 +26,7 @@
     <script src="../bower_components/materialize/dist/js/materialize.js"></script>
 
     <!--Import custom js-->
-    <script src="../resource/js/form.js"></script>
+    <script src="../resource/js/register.js"></script>
 
     <!--import clockpicker-->
 
