fix card history

--- a/student/history.html
+++ b/student/history.html
@@ -51,13 +51,14 @@
         </ul>
     </div>
 </nav>    <!--end nav-->
+
 <div class="row"></div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3">
-        <div class="card">
-            <div class="card-content" style="padding: 6px">
-                <div class="row" style="margin-bottom: 0">
+    <div class="col s12 m6 offset-m3 position-bottom ">
+        <div class="card-panel col s12 hoverable">
+            <div class="card-content col s9">
+                <div class="row">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -71,24 +72,24 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-
-                    <div class="col s6 offset-s7">
-                        <a href="#"><i class="material-icons teal-text lighten-3" style="font-size: 9vmin">check_circle</i></a>
-                        <a href="#"><i class="material-icons deep-orange-text lighten-3" style="font-size: 9vmin">cancel</i></a>
-                        <a href="#"><i class="material-icons grey-text lighten-3" style="font-size: 9vmin">info</i></a>
-                    </div>
                 </div>
+            </div>  <!--end card content-->
+
+            <div class="col s3 flex-element">
+                <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 center-element">
+                    <i class="material-icons">done</i></a>
+
 
             </div>
-
         </div>
     </div>
 </div>
+
 <div class="row">
-    <div class="col s12 m6 offset-m3">
-        <div class="card">
-            <div class="card-content" style="padding: 6px">
-                <div class="row" style="margin-bottom: 0">
+    <div class="col s12 m6 offset-m3 position-bottom">
+        <div class="card-panel col s12 hoverable">
+            <div class="card-content col s9">
+                <div class="row">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -102,24 +103,22 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-
-                    <div class="col s6 offset-s7">
-                        <a href="#"><i class="material-icons teal-text lighten-3" style="font-size: 9vmin">check_circle</i></a>
-                        <a href="#"><i class="material-icons deep-orange-text lighten-3" style="font-size: 9vmin">cancel</i></a>
-                        <a href="#"><i class="material-icons grey-text lighten-3" style="font-size: 9vmin">info</i></a>
-                    </div>
                 </div>
+            </div>  <!--end card content-->
 
+            <div class="col s3 flex-element">
+                <a class="btn-floating btn-large waves-effect waves-light red lighten-1 center-element">
+                    <i class="material-icons">close</i></a>
             </div>
-
         </div>
     </div>
 </div>
+
 <div class="row">
-    <div class="col s12 m6 offset-m3">
-        <div class="card">
-            <div class="card-content" style="padding: 6px">
-                <div class="row" style="margin-bottom: 0">
+    <div class="col s12 m6 offset-m3 position-bottom">
+        <div class="card-panel col s12 hoverable">
+            <div class="card-content col s9">
+                <div class="row">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -133,24 +132,21 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-
-                    <div class="col s6 offset-s7">
-                        <a href="#"><i class="material-icons teal-text lighten-3" style="font-size: 9vmin">check_circle</i></a>
-                        <a href="#"><i class="material-icons deep-orange-text lighten-3" style="font-size: 9vmin">cancel</i></a>
-                        <a href="#"><i class="material-icons grey-text lighten-3" style="font-size: 9vmin">info</i></a>
-                    </div>
                 </div>
+            </div>  <!--end card content-->
 
+            <div class="col s3 flex-element">
+                <a class="btn-floating btn-large waves-effect waves-light grey center-element">1234</a>
             </div>
-
         </div>
     </div>
 </div>
+
 <div class="row">
-    <div class="col s12 m6 offset-m3">
-        <div class="card">
-            <div class="card-content" style="padding: 6px">
-                <div class="row" style="margin-bottom: 0">
+    <div class="col s12 m6 offset-m3 position-bottom">
+        <div class="card-panel col s12 hoverable">
+            <div class="card-content col s9">
+                <div class="row">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -164,18 +160,16 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-
-                    <div class="card-action col offset-s2">
-                        <a href="#" class="teal-text">OK</a>
-                        <a href="#" class="red-text">CANCLE</a>
-                        <a href="#" class="grey-text">INFO</a>
-                    </div>
                 </div>
+            </div>  <!--end card content-->
 
+            <div class="col s3 flex-element">
+                <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 center-element">
+                    <i class="material-icons">done</i></a>
             </div>
-
         </div>
     </div>
 </div>
+
 </body>
 </html>
