--- a/driver/register.html
+++ b/driver/register.html
@@ -67,7 +67,7 @@
             </div>
             <div class="row">
                 <div class="input-field col s10 m6 offset-s1 offset-m3">
-                    <input placeholder="Enter student id" id="identity_card" type="text" class="validate">
+                    <input placeholder="Enter identiry card" id="identity_card" type="text" class="validate">
                     <label for="identity_card">Identity Card</label>
                 </div>
             </div>
