--- a/driver/queue.html
+++ b/driver/queue.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--Import style.css-->
-    <link rel="stylesheet" href="../resource/css/history.css">
+    <link rel="stylesheet" href="../resource/css/get-number.css">
 
     <!--Import font google-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -25,7 +25,7 @@
     <script src="../bower_components/materialize/dist/js/materialize.js"></script>
 
     <!--Import custom js-->
-    <script src="../resource/js/history.js"></script>
+    <script src="../resource/js/get-number.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,43 +51,270 @@
         </ul>
     </div>
 </nav>    <!--end nav-->
-
-<div class="row">
-    <div class="col s6 m2 offset-s3 offset-m5">
-        <div class="card" id="card-number">
-            <div class="card-content white-text center large" style="padding:4px">
-                <span class="card-title"><b>1234</b></span>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="row"></div>
-
-<div class="row">
-    <div class="col s12 m6 offset-m3">
-        <div class="card">
-            <div class="card-content" style="padding: 6px">
-                <div class="row" style="margin-bottom: 0">
-                        <span class="teal-text col s12 m12 center-align">
-                            Are you accept this drive?
-                        </span>
-
-                    <div class="card-action col s8 offset-s3" style="padding: 6px;border-top:none">
-                        <a href="#" class="teal-text col s3 center-align"><b>OK</b></a>
-                        <a href="#" class="deep-orange-text col s3 offset-s1 center-align"><b>Cancel</b></a>
+<div class="row"></div>
+<div class="row"></div>
+<div class="row"></div>
+<div class="container">
+    <div class="row">
+        <div class="clock col s6 m6 offset-s2 offset-m3">
+            <div class='clock-wrapper'>
+                <div class='bg'></div>
+                <div class='minutes'>
+                    <div class='dizaines'>
+                        <div class='number' id='minutes-dizaines-0'>
+                            <div class='up'>
+                                <div class='digit'>0</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>0</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-dizaines-1'>
+                            <div class='up'>
+                                <div class='digit'>1</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>1</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-dizaines-2'>
+                            <div class='up'>
+                                <div class='digit'>2</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>2</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-dizaines-3'>
+                            <div class='up'>
+                                <div class='digit'>3</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>3</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-dizaines-4'>
+                            <div class='up'>
+                                <div class='digit'>4</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>4</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-dizaines-5'>
+                            <div class='up'>
+                                <div class='digit'>5</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>5</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='unites'>
+                        <div class='number' id='minutes-unites-0'>
+                            <div class='up'>
+                                <div class='digit'>0</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>0</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-unites-1'>
+                            <div class='up'>
+                                <div class='digit'>1</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>1</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-unites-2'>
+                            <div class='up'>
+                                <div class='digit'>2</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>2</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-unites-3'>
+                            <div class='up'>
+                                <div class='digit'>3</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>3</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-unites-4'>
+                            <div class='up'>
+                                <div class='digit'>4</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>4</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-unites-5'>
+                            <div class='up'>
+                                <div class='digit'>5</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>5</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-unites-6'>
+                            <div class='up'>
+                                <div class='digit'>6</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>6</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-unites-7'>
+                            <div class='up'>
+                                <div class='digit'>7</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>7</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-unites-8'>
+                            <div class='up'>
+                                <div class='digit'>8</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>8</div>
+                            </div>
+                        </div>
+                        <div class='number' id='minutes-unites-9'>
+                            <div class='up'>
+                                <div class='digit'>9</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>9</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
+                <div class='hours'>
+                    <div class='dizaines'>
+                        <div class='number' id='hours-dizaines-0'>
+                            <div class='up'>
+                                <div class='digit'>0</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>0</div>
+                            </div>
+                        </div>
+                        <div class='number' id='hours-dizaines-1'>
+                            <div class='up'>
+                                <div class='digit'>1</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>1</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='unites'>
+                        <div class='number' id='hours-unites-0'>
+                            <div class='up'>
+                                <div class='digit'>0</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>0</div>
+                            </div>
+                        </div>
+                        <div class='number' id='hours-unites-1'>
+                            <div class='up'>
+                                <div class='digit'>1</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>1</div>
+                            </div>
+                        </div>
+                        <div class='number' id='hours-unites-2'>
+                            <div class='up'>
+                                <div class='digit'>2</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>2</div>
+                            </div>
+                        </div>
+                        <div class='number' id='hours-unites-3'>
+                            <div class='up'>
+                                <div class='digit'>3</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>3</div>
+                            </div>
+                        </div>
+                        <div class='number' id='hours-unites-4'>
+                            <div class='up'>
+                                <div class='digit'>4</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>4</div>
+                            </div>
+                        </div>
+                        <div class='number' id='hours-unites-5'>
+                            <div class='up'>
+                                <div class='digit'>5</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>5</div>
+                            </div>
+                        </div>
+                        <div class='number' id='hours-unites-6'>
+                            <div class='up'>
+                                <div class='digit'>6</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>6</div>
+                            </div>
+                        </div>
+                        <div class='number' id='hours-unites-7'>
+                            <div class='up'>
+                                <div class='digit'>7</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>7</div>
+                            </div>
+                        </div>
+                        <div class='number' id='hours-unites-8'>
+                            <div class='up'>
+                                <div class='digit'>8</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>8</div>
+                            </div>
+                        </div>
+                        <div class='number' id='hours-unites-9'>
+                            <div class='up'>
+                                <div class='digit'>9</div>
+                            </div>
+                            <div class='down'>
+                                <div class='digit'>9</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="col s12 m6 offset-m3">
-        <div class="card">
-            <div class="card-content" style="padding: 6px">
-                <div class="row" style="margin-bottom: 0">
+    <div class="row"></div>
+    <div class="row" id="margin-top">
+        <a class="waves-effect waves-light btn-large col s4 m2 offset-s2 offset-m3">ACCPECT</a>
+        <a class="waves-effect waves-light btn-large col s4 m2 offset-s1 offset-m1 red lighten-1">CANCEL</a>
+    </div>
+
+
+    <div class="row">
+        <div class="col s12 m6 offset-m3 position-bottom ">
+            <div class="card-panel">
+                <div class="card-content">
+                    <div class="row">
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons">face</i>
+                            <i class="small"><b>Name</b> Nguyen Tat Thanh</i>
+                        </span>
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -97,19 +324,10 @@
                             <i class="material-icons s1">watch_later</i>
                             <i class="small"><b>Time</b> 20:30</i>
                         </span><br>
-                        <span class="teal-text col s12 m12">
-                            <i class="material-icons s1">directions_bus</i>
-                            <i class="small"><b>Bus</b> 113</i>
-                        </span>
 
-                    <div class="card-action col s8 offset-s3" style="padding: 6px;border-top:none">
-                        <a href="#" class="teal-text col s3 center-align"><b>OK</b></a>
-                        <a href="#" class="deep-orange-text col s3 offset-s1 center-align"><b>Cancel</b></a>
                     </div>
                 </div>
-
             </div>
-
         </div>
     </div>
 </div>
