change logo and remove line in clock

--- a/driver/choose-bus.html
+++ b/driver/choose-bus.html
@@ -39,7 +39,7 @@
 <body>
 <nav id="nav-color">
     <div class="nav-wrapper">
-        <a href="#!" class="center brand-logo">Logo</a>
+        <a href="#!" class="center brand-logo">Choose Bus</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="#">Choose Bus</a></li>
@@ -55,7 +55,7 @@
 </nav>    <!--end nav-->
 
 <section class="container">
-    <div class="row"><h3 class="center">Chọn xe</h3></div>
+    <div class="row"><h3 class="center">Choose bus</h3></div>
     <div class="row">
         <form class="col s12 m12" action="#">
             <div class="row" id="bus-station">
