--- a/driver/history-2.html
+++ b/driver/history-2.html
@@ -56,13 +56,17 @@
 
 <div class="row">
     <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 hoverable">
-            <div class="card-content col s9">
+        <div class="card-panel col s12 ">
+            <div class="card-content col s12">
                 <div class="row">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
                             <i class="small"><b>To</b> Ho Chi Minh</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons">date_range</i>
+                            <i class="small"><b>Date</b> 26/3/2017</i>
                         </span><br>
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">watch_later</i>
@@ -75,25 +79,23 @@
                 </div>
             </div>  <!--end card content-->
 
-            <div class="col s3 flex-element">
-                <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 center-element">
-                    <i class="material-icons">done</i></a>
-
-
-            </div>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom">
-        <div class="card-panel col s12 hoverable">
-            <div class="card-content col s9">
+    <div class="col s12 m6 offset-m3 position-bottom ">
+        <div class="card-panel col s12 ">
+            <div class="card-content col s12">
                 <div class="row">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
                             <i class="small"><b>To</b> Ho Chi Minh</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons">date_range</i>
+                            <i class="small"><b>Date</b> 26/3/2017</i>
                         </span><br>
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">watch_later</i>
@@ -106,23 +108,23 @@
                 </div>
             </div>  <!--end card content-->
 
-            <div class="col s3 flex-element">
-                <a class="btn-floating btn-large waves-effect waves-light red lighten-1 center-element">
-                    <i class="material-icons">close</i></a>
-            </div>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom">
-        <div class="card-panel col s12 hoverable">
-            <div class="card-content col s9">
+    <div class="col s12 m6 offset-m3 position-bottom ">
+        <div class="card-panel col s12 ">
+            <div class="card-content col s12">
                 <div class="row">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
                             <i class="small"><b>To</b> Ho Chi Minh</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons">date_range</i>
+                            <i class="small"><b>Date</b> 26/3/2017</i>
                         </span><br>
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">watch_later</i>
@@ -135,22 +137,23 @@
                 </div>
             </div>  <!--end card content-->
 
-            <div class="col s3 flex-element">
-                <a class="btn-floating btn-large waves-effect waves-light grey center-element">1234</a>
-            </div>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom">
-        <div class="card-panel col s12 hoverable">
-            <div class="card-content col s9">
+    <div class="col s12 m6 offset-m3 position-bottom ">
+        <div class="card-panel col s12 ">
+            <div class="card-content col s12">
                 <div class="row">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
                             <i class="small"><b>To</b> Ho Chi Minh</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons">date_range</i>
+                            <i class="small"><b>Date</b> 26/3/2017</i>
                         </span><br>
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">watch_later</i>
@@ -163,10 +166,6 @@
                 </div>
             </div>  <!--end card content-->
 
-            <div class="col s3 flex-element">
-                <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 center-element">
-                    <i class="material-icons">done</i></a>
-            </div>
         </div>
     </div>
 </div>
