--- a/student/choose-bus.html
+++ b/student/choose-bus.html
@@ -39,7 +39,7 @@
 <body>
 <nav id="nav-color">
     <div class="nav-wrapper">
-        <a href="#!" class="center brand-logo">Logo</a>
+        <a href="#!" class="center brand-logo">CHOOSE BUS</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="#">Choose Bus</a></li>
@@ -55,7 +55,7 @@
 </nav>    <!--end nav-->
 
 <section class="container">
-    <div class="row"><h3 class="center">Chọn xe</h3></div>
+    <div class="row"><h3 class="center">Choose bus</h3></div>
     <div class="row">
         <form class="col s12 m12" action="#">
             <div class="row" id="bus-station">
@@ -140,12 +140,11 @@
             <div class="row" id="choose-bus">
                 <div class="input-field col s10 m6 offset-s1 offset-m3">
                     <select class="icons">
-                        <option value="" disabled selected>Choose bus</option>
-                        <option value=""  class="circle">bus 1</option>
+                        <option value=""  class="circle" selected>bus 1</option>
                         <option value=""  class="circle">bus 2</option>
                         <option value=""  class="circle">bus 3</option>
                     </select>
-                    <label>Choose the bus you want</label>
+                    <label>Choose bus</label>
                 </div>
             </div>
             <!--submit-->
