--- a/driver/history.html
+++ b/driver/history.html
@@ -56,7 +56,7 @@
 
 <div class="row">
     <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 hoverable">
+        <div class="card-panel col s12 ">
             <div class="card-content col s12">
                 <div class="row">
                         <span class="teal-text col s12 m12">
@@ -81,7 +81,7 @@
 
 <div class="row">
     <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 hoverable">
+        <div class="card-panel col s12 ">
             <div class="card-content col s12">
                 <div class="row">
                         <span class="teal-text col s12 m12">
@@ -106,7 +106,7 @@
 
 <div class="row">
     <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 hoverable">
+        <div class="card-panel col s12 ">
             <div class="card-content col s12">
                 <div class="row">
                         <span class="teal-text col s12 m12">
@@ -131,7 +131,7 @@
 
 <div class="row">
     <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 hoverable">
+        <div class="card-panel col s12 ">
             <div class="card-content col s12">
                 <div class="row">
                         <span class="teal-text col s12 m12">
