--- a/driver/queue.html
+++ b/driver/queue.html
@@ -37,7 +37,7 @@
 <body>
 <nav id="nav-color">
     <div class="nav-wrapper">
-        <a href="#" class="center brand-logo">Logo</a>
+        <a href="#" class="center brand-logo">QUEUE</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="#">Choose Bus</a></li>
