--- a/driver/register.html
+++ b/driver/register.html
@@ -40,7 +40,7 @@
 <body>
 <nav id="nav-color">
     <div class="nav-wrapper">
-        <a href="#!" class="center brand-logo">Logo</a>
+        <a href="#!" class="center brand-logo">REGISTER</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="#">Choose Bus</a></li>
