--- a/student/get-number.html
+++ b/student/get-number.html
@@ -38,7 +38,7 @@
 <body>
 <nav id="nav-color">
     <div class="nav-wrapper">
-        <a href="#" class="center brand-logo">Logo</a>
+        <a href="#" class="center brand-logo">GET NUMBER</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="#">Choose Bus</a></li>
