--- a/admin/report.html
+++ b/admin/report.html
@@ -55,7 +55,7 @@
 <div class="row margin-bottom-0">
     <h5 class="center">REPORT SYSTEM</h5>
 </div>
-<div class="row">
+<div class="row" style="overflow-x: auto">
     <table class="highlight col m6 offset-m3 centered">
         <thead class="thead-color">
         <tr>
