fix history all

--- a/driver/history.html
+++ b/driver/history.html
@@ -5,9 +5,6 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--Import style.css-->
-    <link rel="stylesheet" href="../resource/css/history.css">
-
     <!--Import font google-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -20,6 +17,9 @@
 
     <!--Import materialize-->
     <link rel="stylesheet" href="../bower_components/materialize/dist/css/materialize.css">
+
+    <!--Import style.css-->
+    <link rel="stylesheet" href="../resource/css/history.css">
 
     <!--Import materialize js-->
     <script src="../bower_components/materialize/dist/js/materialize.js"></script>
@@ -55,10 +55,9 @@
 <div class="row"></div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 ">
-            <div class="card-content col s12">
-                <div class="row">
+    <div class="col s12 m6 offset-m3">
+        <div class="card-panel col s12">
+            <div class="card-content col s12" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -72,7 +71,6 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
             </div>  <!--end card content-->
 
         </div>
@@ -80,10 +78,9 @@
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 ">
-            <div class="card-content col s12">
-                <div class="row">
+    <div class="col s12 m6 offset-m3">
+        <div class="card-panel col s12">
+            <div class="card-content col s12" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -97,7 +94,6 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
             </div>  <!--end card content-->
 
         </div>
@@ -105,10 +101,9 @@
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 ">
-            <div class="card-content col s12">
-                <div class="row">
+    <div class="col s12 m6 offset-m3">
+        <div class="card-panel col s12">
+            <div class="card-content col s12" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -122,7 +117,6 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
             </div>  <!--end card content-->
 
         </div>
@@ -130,10 +124,9 @@
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 ">
-            <div class="card-content col s12">
-                <div class="row">
+    <div class="col s12 m6 offset-m3">
+        <div class="card-panel col s12">
+            <div class="card-content col s12" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -147,12 +140,12 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
             </div>  <!--end card content-->
 
         </div>
     </div>
 </div>
+
 
 
 </body>
