--- a/student/history.html
+++ b/student/history.html
@@ -5,9 +5,6 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--Import style.css-->
-    <link rel="stylesheet" href="../resource/css/history.css">
-
     <!--Import font google-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -20,6 +17,9 @@
 
     <!--Import materialize-->
     <link rel="stylesheet" href="../bower_components/materialize/dist/css/materialize.css">
+
+    <!--Import style.css-->
+    <link rel="stylesheet" href="../resource/css/history.css">
 
     <!--Import materialize js-->
     <script src="../bower_components/materialize/dist/js/materialize.js"></script>
@@ -55,14 +55,17 @@
 <div class="row"></div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 hoverable">
-            <div class="card-content col s9">
-                <div class="row">
+    <div class="col s12 m6 offset-m3 ">
+        <div class="card-panel col s12 ">
+            <div class="card-content col s10" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
                             <i class="small"><b>To</b> Ho Chi Minh</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons">date_range</i>
+                            <i class="small"><b>Date</b> 26/3/2017</i>
                         </span><br>
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">watch_later</i>
@@ -72,28 +75,27 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
             </div>  <!--end card content-->
-
-            <div class="col s3 flex-element">
-                <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 center-element">
+            <div class="col s2 ">
+                <a class="btn-floating waves-effect waves-light teal lighten-1 center-element center-align">
                     <i class="material-icons">done</i></a>
-
-
             </div>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom">
-        <div class="card-panel col s12 hoverable">
-            <div class="card-content col s9">
-                <div class="row">
+    <div class="col s12 m6 offset-m3 ">
+        <div class="card-panel col s12 ">
+            <div class="card-content col s10" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
                             <i class="small"><b>To</b> Ho Chi Minh</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons">date_range</i>
+                            <i class="small"><b>Date</b> 26/3/2017</i>
                         </span><br>
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">watch_later</i>
@@ -103,11 +105,9 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
             </div>  <!--end card content-->
-
-            <div class="col s3 flex-element">
-                <a class="btn-floating btn-large waves-effect waves-light red lighten-1 center-element">
+            <div class="col s2 ">
+                <a class="btn-floating waves-effect waves-light red lighten-1 center-element center-align">
                     <i class="material-icons">close</i></a>
             </div>
         </div>
@@ -115,14 +115,17 @@
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom">
-        <div class="card-panel col s12 hoverable">
-            <div class="card-content col s9">
-                <div class="row">
+    <div class="col s12 m6 offset-m3 ">
+        <div class="card-panel col s12 ">
+            <div class="card-content col s10" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
                             <i class="small"><b>To</b> Ho Chi Minh</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons">date_range</i>
+                            <i class="small"><b>Date</b> 26/3/2017</i>
                         </span><br>
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">watch_later</i>
@@ -132,25 +135,27 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
             </div>  <!--end card content-->
-
-            <div class="col s3 flex-element">
-                <a class="btn-floating btn-large waves-effect waves-light grey center-element">1234</a>
+            <div class="col s2 ">
+                <a class="btn-floating waves-effect waves-light grey lighten-1 center-element center-align">
+                    123</a>
             </div>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom">
-        <div class="card-panel col s12 hoverable">
-            <div class="card-content col s9">
-                <div class="row">
+    <div class="col s12 m6 offset-m3 ">
+        <div class="card-panel col s12 ">
+            <div class="card-content col s10" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
                             <i class="small"><b>To</b> Ho Chi Minh</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons">date_range</i>
+                            <i class="small"><b>Date</b> 26/3/2017</i>
                         </span><br>
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">watch_later</i>
@@ -160,16 +165,13 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
             </div>  <!--end card content-->
-
-            <div class="col s3 flex-element">
-                <a class="btn-floating btn-large waves-effect waves-light teal lighten-1 center-element">
+            <div class="col s2 ">
+                <a class="btn-floating waves-effect waves-light teal lighten-1 center-element center-align">
                     <i class="material-icons">done</i></a>
             </div>
         </div>
     </div>
 </div>
-
 </body>
 </html>
