--- a/driver/history-2.html
+++ b/driver/history-2.html
@@ -5,9 +5,6 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--Import style.css-->
-    <link rel="stylesheet" href="../resource/css/history.css">
-
     <!--Import font google-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -20,6 +17,9 @@
 
     <!--Import materialize-->
     <link rel="stylesheet" href="../bower_components/materialize/dist/css/materialize.css">
+
+    <!--Import style.css-->
+    <link rel="stylesheet" href="../resource/css/history.css">
 
     <!--Import materialize js-->
     <script src="../bower_components/materialize/dist/js/materialize.js"></script>
@@ -55,10 +55,9 @@
 <div class="row"></div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom ">
+    <div class="col s12 m6 offset-m3 ">
         <div class="card-panel col s12 ">
-            <div class="card-content col s12">
-                <div class="row">
+            <div class="card-content col s12" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -76,7 +75,6 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
             </div>  <!--end card content-->
 
         </div>
@@ -84,10 +82,9 @@
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom ">
+    <div class="col s12 m6 offset-m3 ">
         <div class="card-panel col s12 ">
-            <div class="card-content col s12">
-                <div class="row">
+            <div class="card-content col s12" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -105,7 +102,32 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
+            </div>  <!--end card content-->
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col s12 m6 offset-m3 ">
+        <div class="card-panel col s12 ">
+            <div class="card-content col s12" style="padding:10px 0 10px 0">
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons s1">location_on</i>
+                            <i class="small"><b>From </b>Ha Noi </i>
+                            <i class="small"><b>To</b> Ho Chi Minh</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons">date_range</i>
+                            <i class="small"><b>Date</b> 26/3/2017</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons s1">watch_later</i>
+                            <i class="small"><b>Time</b> 20:30</i>
+                        </span><br>
+                        <span class="teal-text col s12 m12">
+                            <i class="material-icons s1">directions_bus</i>
+                            <i class="small"><b>Bus</b> 113</i>
+                        </span>
             </div>  <!--end card content-->
 
         </div>
@@ -113,10 +135,9 @@
 </div>
 
 <div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom ">
+    <div class="col s12 m6 offset-m3 ">
         <div class="card-panel col s12 ">
-            <div class="card-content col s12">
-                <div class="row">
+            <div class="card-content col s12" style="padding:10px 0 10px 0">
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -134,41 +155,10 @@
                             <i class="material-icons s1">directions_bus</i>
                             <i class="small"><b>Bus</b> 113</i>
                         </span>
-                </div>
             </div>  <!--end card content-->
 
         </div>
     </div>
 </div>
-
-<div class="row">
-    <div class="col s12 m6 offset-m3 position-bottom ">
-        <div class="card-panel col s12 ">
-            <div class="card-content col s12">
-                <div class="row">
-                        <span class="teal-text col s12 m12">
-                            <i class="material-icons s1">location_on</i>
-                            <i class="small"><b>From </b>Ha Noi </i>
-                            <i class="small"><b>To</b> Ho Chi Minh</i>
-                        </span><br>
-                        <span class="teal-text col s12 m12">
-                            <i class="material-icons">date_range</i>
-                            <i class="small"><b>Date</b> 26/3/2017</i>
-                        </span><br>
-                        <span class="teal-text col s12 m12">
-                            <i class="material-icons s1">watch_later</i>
-                            <i class="small"><b>Time</b> 20:30</i>
-                        </span><br>
-                        <span class="teal-text col s12 m12">
-                            <i class="material-icons s1">directions_bus</i>
-                            <i class="small"><b>Bus</b> 113</i>
-                        </span>
-                </div>
-            </div>  <!--end card content-->
-
-        </div>
-    </div>
-</div>
-
 </body>
 </html>
