--- a/driver/register.html
+++ b/driver/register.html
@@ -38,27 +38,11 @@
     <![endif]-->
 </head>
 <body>
-<nav id="nav-color">
-    <div class="nav-wrapper">
-        <a href="#!" class="center brand-logo">REGISTER</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-            <li><a href="#">Choose Bus</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Profile</a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-            <li><a href="#">Choose Bus</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Profile</a></li>
-        </ul>
-    </div>
-</nav>    <!--end nav-->
 
 <section class="container">
     <h5></h5>
     <div class="row">
-        <form class="col s12" action="#">
+        <form class="col s12" action="">
             <div class="row">
                 <div class="input-field col s10 m6 offset-s1 offset-m3">
                     <input placeholder="Enter full name" id="full_name" type="text" class="validate">
