fix no style padding history

--- a/student/history.html
+++ b/student/history.html
@@ -57,7 +57,7 @@
 <div class="row">
     <div class="col s12 m6 offset-m3 ">
         <div class="card-panel col s12 ">
-            <div class="card-content col s10" style="padding:10px 0 10px 0">
+            <div class="card-content col s10" >
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -87,7 +87,7 @@
 <div class="row">
     <div class="col s12 m6 offset-m3 ">
         <div class="card-panel col s12 ">
-            <div class="card-content col s10" style="padding:10px 0 10px 0">
+            <div class="card-content col s10" >
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -117,7 +117,7 @@
 <div class="row">
     <div class="col s12 m6 offset-m3 ">
         <div class="card-panel col s12 ">
-            <div class="card-content col s10" style="padding:10px 0 10px 0">
+            <div class="card-content col s10" >
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -147,7 +147,7 @@
 <div class="row">
     <div class="col s12 m6 offset-m3 ">
         <div class="card-panel col s12 ">
-            <div class="card-content col s10" style="padding:10px 0 10px 0">
+            <div class="card-content col s10" >
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
