--- a/driver/history-2.html
+++ b/driver/history-2.html
@@ -56,8 +56,8 @@
 
 <div class="row">
     <div class="col s12 m6 offset-m3 ">
-        <div class="card-panel col s12 ">
-            <div class="card-content col s12" style="padding:10px 0 10px 0">
+        <div class="card-panel col s12">
+            <div class="card-content col s12"  >
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -84,7 +84,7 @@
 <div class="row">
     <div class="col s12 m6 offset-m3 ">
         <div class="card-panel col s12 ">
-            <div class="card-content col s12" style="padding:10px 0 10px 0">
+            <div class="card-content col s12" >
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -110,7 +110,7 @@
 <div class="row">
     <div class="col s12 m6 offset-m3 ">
         <div class="card-panel col s12 ">
-            <div class="card-content col s12" style="padding:10px 0 10px 0">
+            <div class="card-content col s12" >
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
@@ -137,7 +137,7 @@
 <div class="row">
     <div class="col s12 m6 offset-m3 ">
         <div class="card-panel col s12 ">
-            <div class="card-content col s12" style="padding:10px 0 10px 0">
+            <div class="card-content col s12" >
                         <span class="teal-text col s12 m12">
                             <i class="material-icons s1">location_on</i>
                             <i class="small"><b>From </b>Ha Noi </i>
