--- a/student/profile.html
+++ b/student/profile.html
@@ -75,7 +75,7 @@
 
                     <div id="general">
                         <span class="teal-text"><b>User name</b></span>
-                        <input id="user_name" type="text" class="validate" name="user_name" value="anhladaica">
+                        <input id="user_name" type="text" class="validate" name="user_name" value="anhladaica" disabled>
                         <span class="teal-text"><b>Full name</b></span>
                         <input id="full_name" type="text" class="validate" name="full_name" value="Nguyen Van A">
                         <span class="teal-text"><b>Day of birth</b></span>
